[package]
name = "spinners-rand"
version = "0.1.1"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
description = "Get a random `Spinners` from the `spinners` crate"
license = "MIT"
repository = "https://github.com/io12/rust-spinners-rand"

[dependencies]
spinners = "1.2.0"
rand = "0.7.2"
