[package]
name = "spinners-rand"
version = "0.1.2"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
description = "Get a random `Spinners` from the `spinners` crate"
license = "MIT"
repository = "https://github.com/io12/rust-spinners-rand"
documentation = "https://docs.rs/spinners-rand"

[dependencies]
spinners = "3.0.1"
rand = "0.8.0"
